[package]
name = "life"
version = "0.1.0"
authors = ["buckn <nathanieljbuck7@gmail.com>"]
description = "An implementation of the Game of Life in rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
cfg-if = "^0.1"

[profile.release]
opt-level = "s"